--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
-{
-  "name": "backend-test",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
+  {
+    "name": "firsttestexpres",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "dependencies": {
-    "express": "^4.18.2"
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "type": "commonjs",
+    "dependencies": {
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0"
+  },
+    "devDependencies": {
+    "nodemon": "^3.1.10"
   }
-}
+  }
