--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
-  {
-    "name": "firsttestexpres",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
+{
+  "name": "firsttestexpres",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "type": "commonjs",
-    "dependencies": {
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
-    "devDependencies": {
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
-  }
+}
