--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ frontend/node_modules/
 frontend/build/
 .env
 package-lock.json
+package.json
+frontend/package.json
+frontend/pnpm-lock.yaml
+pnpm-lock.yaml
+
