--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,24 +2,45 @@
   "cSpell.words": [
     "accueil",
     "Alternance",
+    "Annonce",
+    "bleu",
+    "cassé",
     "choisir",
+    "clic",
     "Contrat",
     "Crédit",
+    "d'annonces",
     "dans",
     "dégradé",
     "déroulant",
+    "deuxième",
+    "données",
     "droite",
+    "emploie",
+    "Erreur",
     "flèche",
     "laisser",
     "légèrement",
     "Liste",
+    "lors",
+    "nbannounce",
+    "nombre",
+    "offre",
     "parmi",
     "principale",
+    "Rechercher",
+    "Récupération",
+    "récupère",
     "removebg",
+    "réponse",
+    "requête",
+    "résultats",
     "S’inscrire",
     "sélectionnée",
     "spéciale",
+    "stocke",
     "texte",
+    "toutes",
     "vôtre",
     "vous"
   ]
