connexionUser et modifUser

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,13 @@
 {
   "cSpell.words": [
+    "accéder",
     "accueil",
+    "ajuster",
     "Alternance",
     "Annonce",
+    "associé",
+    "Aucun",
+    "avec",
     "bleu",
     "cassé",
     "choisir",
