--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,14 @@
     "build": "react-scripts build"
   },
   "dependencies": {
-    "react": "^18.2.0",
+    "lucide-react": "^0.545.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1"
   },
+  "proxy": "http://localhost:80",
   "browserslist": {
     "production": [
       ">0.2%",
