--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "startV1": "node server.js",
+    "dev": "nodemon server.js",
+    "server": "node server.js",
+    "serverdev": "nodemon server.js",
+    "client": "npm start --prefix frontend",
+    "start": "npm-run-all --parallel server client",
+    "devv2": "npm-run-all --parallel serverdev client"
   },
   "keywords": [],
   "author": "",
@@ -20,9 +25,11 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "multer": "^2.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "react": "^19.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "npm-run-all": "^4.1.5"
   }
 }
