--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "multer": "^2.0.2",
+    "node": "^25.0.0",
     "pg": "^8.16.3",
     "react": "^19.2.0"
   },
